--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
+  intl_utils: ^2.8.7
+
+dependency_overrides:
+  intl: ^0.18.0
+
+flutter_intl:
+  enabled: true # Required. Must be set to true to activate the package. Default: false
+  class_name: Localize # Optional. Sets the name for the generated localization class. Default: S
+  main_locale: es
+  arb_dir: lib/internationalization
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +70,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
