--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   intl_utils: ^2.8.7
+  flutter_svg: ^2.0.10+1
 
 dependency_overrides:
   intl: ^0.18.0
@@ -73,9 +74,14 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/common/
+    - path: assets/free/
+      flavors:
+        - free
+    - path: assets/full/
+      flavors:
+        - full
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
